--- a/src/app/history/history-details.component.html
+++ b/src/app/history/history-details.component.html
@@ -7,7 +7,7 @@
     </div>
     <div class="form-group">
         <label for="tags">Date</label>
-        <input type="text" class="form-control" value="{{history.date}}">
+        <input type="text" class="form-control" value="{{history.date | date}}">
     </div>
     <div class="form-group">
         <label for="tags">Date</label>
