--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -4,8 +4,8 @@
       <a class="navbar-brand" href="#">Agenda</a>
     </div>
     <ul class="nav navbar-nav">
-      <li><a href="#">My Entries</a></li>
-      <li><a href="#">Public</a></li>      
+      <li><a [routerLink]="['/histories']">My Histories</a></li>
+      <li><a href="#">Explore</a></li>      
     </ul>
   </div>
 </nav>
