--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <div class="container">
-  <nav-bar></nav-bar>
-  <history-details></history-details>
+  <nav-bar></nav-bar> 
+  <router-outlet></router-outlet>
 </div>
