--- a/src/app/history/history-list.component.html
+++ b/src/app/history/history-list.component.html
@@ -1,30 +1,45 @@
 
 <div class="container">
-  <div class="form-group col-md-offset-9">
-      <input type="form-control mySearch float-right" name="" value="Search">
+  <div class="row col-md-9">
+     <button class="btn btn-primary" [routerLink]="['/new']">Add +</button>
   </div>
-  
-  <div class="list-group" >  
-
-    <div class="row list-group-item" *ngFor="let item of agenda.histories">
-      <div class="content col-md-10">
-         {{item.content}} {{item.date}}
-      </div>
-
-      <div class="actionIcons col-md-2">
-        <a href="https://www.google.com.ar">
-          <i class="glyphicon glyphicon-pencil"></i>
-        </a>
-        <a href="https://www.google.com.ar">
-          <i class="glyphicon glyphicon-heart"></i>
-        </a>
-        <a href="https://www.google.com.ar">
-          <i class="glyphicon glyphicon-remove"></i>
-        </a>
-      </div>
+  <div class="row form-group col-md-offset-9">  
     
-    </div>   
+            Filter By:  <input type="form-control mySearch float-right" name="" value="Search">
     
-  </div>
+    </div>
+
+  <div class="table-responsible">
+    <table class="table">
+      <thead>
+        <tr>
+          <th>Date</th>
+          <th>Content</th>
+          <th>Tags</th>
+          <th>Actions</th>
+        </tr>
+      </thead>
+      <tbody>
+         <tr *ngFor='let item of agenda.histories'>
+           <td>{{item.date | date}}</td>
+           <td>{{item.content}}</td>
+           <td>{{item.hashtags}}</td>
+           <td>
+            
+                <a [routerLink]="['/history',item.id]">
+                     <i class="glyphicon glyphicon-pencil"></i>
+                </a>
+                <a href="https://www.google.com.ar">
+                  <i class="glyphicon glyphicon-heart"></i>
+                </a>
+                <a href="https://www.google.com.ar">
+                  <i class="glyphicon glyphicon-remove"></i>
+                </a>
+            
+           </td>
+         </tr>
+      </tbody>
+    </table>
+  </div> 
 </div>  
 
